Fix spacing on mobile

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -15,6 +15,10 @@ section {
   margin: 2.5em 0;
 }
 
+h1, h2 {
+  line-height: 1.4em
+}
+
 h2 {
   margin-bottom: 1.2em;
 }
@@ -48,6 +52,12 @@ svg.feather {
 
 .flexbox > div:first-child {
   margin-right: 20px;
+}
+
+@media all and (max-width: 640px) {
+  .flexbox {
+    flex-direction: column;
+  }
 }
 
 .columns .flexbox:not(:first-child) {
